--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,15 @@
 	<title>笨笨书屋</title>
 	<script src="/lib/avalon/avalon.js"></script>
 	<script src="/lib/avalon/mmRequest.js"></script>
+	<script src="/lib/avalon/mmRouter.js"></script>
+	<script src="/lib/routers/index.js"></script>
+	<script src="/javascripts/page/jquery-1.11.1.js"></script>
+	<script src="/javascripts/page/selectize.js"></script>
+	<script src="/javascripts/page/confirm_page.js"></script>
+	<link rel="stylesheet" href="/stylesheets/base/base.css">
+	<link rel="stylesheet" href="/stylesheets/common/common.css">
+	<link rel="stylesheet" href="/stylesheets/common/selectize.default.css">
+	<link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
 	<script>
@@ -26,8 +35,39 @@ require(['./mmRequest'], function(avalon) {
   });
  })
 
-
 	</script>
-	<div ms-controller="main-content">点我加载点数据-avalon.getJSON{{title}}</div>
+	<section class="main-content" ms-controller="main-content">
+		<h2>{{ title }}</h2>
+		<a ms-if="user && user.name == 'name'" href='/getuppaperBook'> 新书上传地址[仅管理员可见]</a>
+
+		<ul class="paperBook">
+			<li ms-repeat="paperBook">
+				<div class="btn delete" ms-attr-paper-id="{{el._id}}">&times;</div>
+				<div class="paperCoverImg" ms-if="el.cover.data == undefined"><img src="/images/default/avatar.jpg" alt="默认封面" class="paperCover"></div>
+				<div class="paperCoverImg" ms-if="el.cover.data != undefined"><img class="paperCover" ms-src="data:{{el.cover.contentType}};base64,{{el.imgSrc}}" ms-attr-alt="el.name_zh"></div>
+				<div class="info">
+					<h3 class="title">
+						<a ms-href="/serial/{{el._id}}"> {{el.name_zh}}</a>
+						<a ms-if="user != undefined && user.name == 'name'" ms-href="/edit/{{el._id}}">修改新书信息[仅管理员可见]</a>
+					</h3>
+					<div class="author overdot">作者：{{el.author}}</div>
+					<div class="press">出版社：{{el.press}}</div>
+					<div class="releaseTime">出版时间：{{el.releaseTime}}</div>
+				</div>
+			</li>
+		</ul>
+	</section>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
