--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="fragment" content="!" />
 	<title>笨笨书屋</title>
 	<script src="/lib/avalon/avalon.js"></script>
 	<script src="/lib/avalon/mmRequest.js"></script>
@@ -47,7 +48,7 @@ require(['./mmRequest'], function(avalon) {
 				<div class="paperCoverImg" ms-if="el.cover.data != undefined"><img class="paperCover" ms-src="data:{{el.cover.contentType}};base64,{{el.imgSrc}}" ms-attr-alt="el.name_zh"></div>
 				<div class="info">
 					<h3 class="title">
-						<a ms-href="/serial/{{el._id}}"> {{el.name_zh}}</a>
+						<a ms-href="#!/paperbook/{{el._id}}" target="_self"> {{el.name_zh}}</a>
 						<a ms-if="user != undefined && user.name == 'name'" ms-href="/edit/{{el._id}}">修改新书信息[仅管理员可见]</a>
 					</h3>
 					<div class="author overdot">作者：{{el.author}}</div>
