--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,6 @@
 	<meta name="fragment" content="!" />
 	<title>笨笨书屋</title>
 	<script src="/javascripts/avalon/avalon.js"></script>
-	<script src="/javascripts/avalon/mmRequest.js"></script>
-	<script src="/javascripts/avalon/mmRouter.js"></script>
 	<script src="/javascripts/routers/index.js"></script>
 	<script src="/javascripts/page/jquery-1.11.1.js"></script>
 	<script src="/javascripts/page/selectize.js"></script>
@@ -16,69 +14,19 @@
 	<link rel="stylesheet" href="/stylesheets/common/selectize.default.css">
 	<link rel="stylesheet" href="/stylesheets/style.css">
 </head>
-<body>
+<body ms-controller="root">
+	<div ms-view="left" data-include-replace="true"></div>
+	<div ms-view="header" data-include-replace="true"></div>
+	<div ms-view="main-content"></div>
+</body>
 	<script>
 	require.config({
 	    baseUrl: "./javascripts"
 	});
-	avalon.templateCache['aaa.html'] = '<strong>sdfs</strong>';
-	avalon.templateCache['bbb.html'] = '<em>sdfsfdaswe</em>';
-require(['./avalon/mmRequest'], function(avalon) {
-	var vm = avalon.define({
-		$id: "main-content",
-		aaa:'aaa.html',
-		title:'',
-		success:'',
-		paperBook:[],
-		change:function(){
-			vm.aaa = vm.aaa === 'aaa.html' ? 'bbb.html' : 'aaa.html'
-		},
-		adjust:function(tmpl){
-			return tmpl + " "+(new Date - 0);
-		},
-		render: function(){
-			console.log('render');
-		}
-   });
-
-	avalon.getJSON( "/index",function(data){
-   for(var i in data){
-     if(vm.hasOwnProperty(i)){
-        vm[i] = data[i]
-     }
-   }
-   // avalon.scan();
-  });
- })
-
+  require(["./route"], function(route) {
+      route && route.init && route.init()
+  })
 	</script>
-	<section class="main-content" ms-controller="main-content">
-		<h2>{{ title }}</h2>
-		<a ms-if="user && user.name == 'name'" href='/getuppaperBook'> 新书上传地址[仅管理员可见]</a>
-
-		<ul class="paperBook">
-			<li ms-repeat="paperBook">
-				<div class="btn delete" ms-attr-paper-id="{{el._id}}">&times;</div>
-				<div class="paperCoverImg" ms-if="el.cover.data == undefined"><img src="/images/default/avatar.jpg" alt="默认封面" class="paperCover"></div>
-				<div class="paperCoverImg" ms-if="el.cover.data != undefined"><img class="paperCover" ms-src="data:{{el.cover.contentType}};base64,{{el.imgSrc}}" ms-attr-alt="el.name_zh"></div>
-				<div class="info">
-					<h3 class="title">
-						<a ms-href="#!/paperbook/{{el._id}}" target="_self"> {{el.name_zh}}</a>
-						<a ms-if="user != undefined && user.name == 'name'" ms-href="/edit/{{el._id}}">修改新书信息[仅管理员可见]</a>
-					</h3>
-					<div class="author overdot">作者：{{el.author}}</div>
-					<div class="press">出版社：{{el.press}}</div>
-					<div class="releaseTime">出版时间：{{el.releaseTime}}</div>
-				</div>
-			</li>
-		</ul>
-
-		<div ms-include-src="aaa" data-include-loaded="adjust"></div>
-		<div ms-include-src="'lib/modules/index.html'" data-include-rendered="render"></div>
-		<button type="button" ms-click="change">点击</button>
-
-	</section>
-</body>
 </html>
 
 
