avalon-mmState-并没有什么进展

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,9 @@
 	<link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body ms-controller="root">
-	<div ms-view="left" data-include-replace="true"></div>
+	<div ms-view="home" data-include-replace="true"></div>
 	<div ms-view="header" data-include-replace="true"></div>
-	<div ms-view="main-content"></div>
+	<div ms-view=""></div>
 </body>
 	<script>
 	require.config({
