--- a/public/modules/left.html
+++ b/public/modules/left.html
@@ -7,6 +7,7 @@
 	</div>
 	<ul class="nav">
     <li><a [routerLink]="['/Index']" class="no_unl">新书速递</a></li>
+    <li><a [routerLink]="['/Serial']" class="no_unl">最新连载</a></li>
 	</ul>
 </div>
 <router-outlet></router-outlet>
