--- a/public/modules/serial/serial.html
+++ b/public/modules/serial/serial.html
@@ -8,7 +8,7 @@
 				</div>
 				<h3 class="title overdot"><a href="">{{book.name_zh}}</a></h3>
 				<div class="info" title="{{book.intro}}">
-					{{book.intro | subStr}}
+					{{book.intro}}
 				</div>
 			</li>
 		</ul>
