抽取个人信息获取

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
   <!-- 3. Display the application -->
   <body>
     <app>Loading...</app>
-    <div class="timer" style="margin-left:250px;"></div>
+    <!-- <div class="timer" style="margin-left:250px;"></div> -->
     <script>
       
       var curTime = (new Date()).getTime()/1000
