--- a/public/modules/left.html
+++ b/public/modules/left.html
@@ -1,13 +1,15 @@
 <div class="left-content">
 	<div class="perinfo tc mt30 mb30">
 		<img src="/images/logo.jpg" class="avatar-120">
-		<p class="username">
-			笨笨书屋
-		</p>
+		<p class="username" *ngIf="user.err">笨笨书屋</p>
+		<p class="username" *ngIf="!user.err">{{user.user.name}}</p>
 	</div>
 	<ul class="nav">
     <li><a [routerLink]="['/Index']" class="no_unl">新书速递</a></li>
     <li><a [routerLink]="['/Serial']" class="no_unl">最新连载</a></li>
+    <li *ngIf="user.err"><a [routerLink]="['/Login']" class="no_unl">登录</a></li>
+    <li *ngIf="!user.err"><a [routerLink]="['/Perinfo']" class="no_unl">个人中心</a></li>
+    <li *ngIf="!user.err"><a (click)='logout()' class="no_unl">退出</a></li>
 	</ul>
 </div>
 <router-outlet></router-outlet>
