--- a/public/modules/paper-book/paper-book.html
+++ b/public/modules/paper-book/paper-book.html
@@ -7,7 +7,7 @@
 					<img src="data:{{book.cover.contentType}};base64,{{book.imgSrc}}" class="paperCover">
 				</div>
 				<div class="info">
-					<h3 class="title"><a  >{{book.name_zh}}</a></h3>
+					<h3 class="title"><a href="/book/s">{{book.name_zh}}</a></h3>
 					<div class="author overdot">作者：{{book.author}}</div>
 					<div class="press">出版社：{{book.press}}</div>
 					<div class="releaseTime">出版年：{{book.releaseTime}}</div>
@@ -16,3 +16,4 @@
 		</ul>
 	</div>
 </div>
+<router-outlet></router-outlet>
