--- a/public/modules/user/perinfo.html
+++ b/public/modules/user/perinfo.html
@@ -1,12 +1,12 @@
 <div class="main-content">
 	<h2 class="perInfo-title">{{perinfor.title}}</h2>
 	<ul class="perinfo-nav">
-		<li>我上传的书</li>
-		<li>我希望读的书</li>
-		<li>我读过的书</li>
-		<li>我正在读的书	</li>
-		<li>修改头像</li>
-		<li>修改个人信息</li>
+		<li [class.sel]="isSel" (click)="switchNav()">我上传的书</li>
+		<li [class.sel]="isSel" (click)="switchNav($event.target)">我希望读的书</li>
+		<li [class.sel]="isSel" (click)="switchNav($event.target)">我读过的书</li>
+		<li [class.sel]="isSel" (click)="switchNav($event.target)">我正在读的书	</li>
+		<li [class.sel]="isSel" (click)="switchNav($event.target)">修改头像</li>
+		<li [class.sel]="isSel" (click)="switchNav($event.target)">修改个人信息</li>
 	</ul>
 	<div class="content-box">
 		<div class="mybook" id="book">
@@ -69,18 +69,25 @@
 		<br>
 		<label for="" class="mt10 db">邮箱：<input type="text',name='email',value='#{perinfor.email}" class="user-email"></label>
 		<br>
-		<label for="" class="mt10 db" *ngIf="perinfor.sex == 1">性别：
-			<input type="radio',name='sex',value='0" class="user-sex">	男
-			<input type="radio',name='sex',value='1" class="user-sex" checked="{{perinfor.sex}}">女
-			<input type="radio',name='sex" class="user-sex">保密
-		</label>
-		<label for="" class="mt10 db" *ngIf="perinfor.sex == 0">性别：
-			<input type="radio',name='sex',value='0" class="user-sex" checked="{{perinfor.sex}}">	男
-			<input type="radio',name='sex',value='1" class="user-sex">女
-			<input type="radio',name='sex" class="user-sex">保密
+		<label for="" class="mt10 db" [ngSwitch]="perinfor.sex">性别：
+			<template [ngSwitchWhen]="1">
+				<input type="radio" name="sex" value="0" class="user-sex">	男
+				<input type="radio" name="sex" value="1" class="user-sex" checked="{{perinfor.sex}}">女
+				<input type="radio" name="sex" class="user-sex">保密
+			</template>
+			<template [ngSwitchWhen]="0">
+				<input type="radio" name="sex" value="0" class="user-sex" checked="{{perinfor.sex}}">	男
+				<input type="radio" name="sex" value="1" class="user-sex">女
+				<input type="radio" name="sex" class="user-sex">保密
+			</template>
+			<template ngSwitchDefault>
+				<input type="radio" name="sex" value="0" class="user-sex">	男
+				<input type="radio" name="sex" value="1" class="user-sex">女
+				<input type="radio" name="sex" class="user-sex" checked="{{perinfor.sex}}">保密
+			</template>
 		</label>
 		<br>
-		<input type="button',value='提交" id="postperInfo" class="btn mt10">
+		<input type="button" value="提交" id="postperInfo" class="btn mt10">
 	</form>
 </div>
 <script>
