--- a/public/modules/left.html
+++ b/public/modules/left.html
@@ -1,17 +1,18 @@
 <div class="left-content">
 	<div class="perinfo tc mt30 mb30">
 		<img src="/images/logo.jpg" class="avatar-120">
-		<p class="username" *ngIf="user.err">笨笨书屋</p>
-		<p class="username" *ngIf="!user.err">{{user.user.name}}</p>
+		<p class="username" *ngIf="currentUser.error">笨笨书屋</p>
+		<p class="username" *ngIf="!currentUser.error">{{currentUser?.user?.name}}</p>
 	</div>
 	<ul class="nav">
     <li><a [routerLink]="['/Index']" class="no_unl">新书速递</a></li>
     <li><a [routerLink]="['/Serials']" class="no_unl">最新连载</a></li>
     <li><a [routerLink]="['/Reviewer']" class="no_nul">评书人</a></li>
-    <li *ngIf="user.err"><a [routerLink]="['/Login']" class="no_unl">登录</a></li>
-    <li *ngIf="!user.err"><a [routerLink]="['/Perinfo']" class="no_unl">个人中心</a></li>
-    <li *ngIf="!user.err"><a (click)='logout()' class="no_unl">退出</a></li>
+    <li *ngIf="currentUser.error"><a [routerLink]="['/Login']" class="no_unl">登录</a></li>
+    <li *ngIf="!currentUser.error"><a [routerLink]="['/My']" class="no_unl">个人中心</a></li>
+    <li *ngIf="!currentUser.error"><a (click)='logout()' class="no_unl">退出</a></li>
 	</ul>
 </div>
-<login-cmp (every-second)="everySecond()"></login-cmp>
+{{currentUser?.user?.name}}
+{{currentUser?.error?.text}}
 <router-outlet></router-outlet>
