--- a/public/modules/user/login.html
+++ b/public/modules/user/login.html
@@ -14,4 +14,5 @@
 		<br>
 		<input type="submit" value="立即登录" class="btn login" [disabled]='invalid'>
 	</form>
+	 <div (click)="onDelete()">delete</div>
 </div>
