--- a/public/modules/serial/serials.html
+++ b/public/modules/serial/serials.html
@@ -6,7 +6,7 @@
 				<div class="coverImg">
 					<img src="data:{{book.cover.contentType}};base64,{{book.imgSrc}}" class="cover">
 				</div>
-				<h3 class="title overdot"><a href="/serial/{{book._id}}">{{book.name_zh}}</a></h3>
+				<h3 class="title overdot imitate-href" id="{{book._id}}" (click)="gotoSerial($event.target.id)">{{book.name_zh}}</h3>
 				<div class="info" title="{{book.intro}}">
 					{{book.intro}}
 				</div>
