--- a/public/modules/paper-book/paper-book.html
+++ b/public/modules/paper-book/paper-book.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/stylesheets/common/common.css">
 <div class="main-content" >
 	<h2 class="">{{paperBook.title}}</h2>
 	<div class="bd">
