--- a/public/modules/user/my-book.html
+++ b/public/modules/user/my-book.html
@@ -1,10 +1,10 @@
 <div class="mybook" id="book">
 			<div class="title">我上传的书<a href="">+添加一本书</a></div>
-			<div class="content" *ngIf="perinfor.user">
+			<div class="content" *ngIf="perinfor?.userInfor">
 				<ul>
-					<li *ngFor="#iBook of perinfor.user.bookId,#i=index" class="mb10">
+					<li *ngFor="#iBook of perinfor.userInfor.bookId,#i=index" class="mb10">
 						<span class="mr10">{{i+1}}</span>
-						<a href="/serial/{{iBook._id}}" class="book-title overdot">{{iBook.name_zh}}</a>
+						<a id="{{iBook._id}}" (click)="usergotoSerial($event.target.id)" class="book-title overdot">{{iBook.name_zh}}</a>
 						<a href="/book/upbookDescribe/{{iBook._id}}">修改描述</a>
 						<a href="/book/upbookContent/{{iBook._id}}">修改内容</a>
 						<a href="/book/bookContent/delete/{{iBook._id}}" class="deleteCon">清空内容</a>
@@ -12,5 +12,5 @@
 					</li>
 				</ul>
 			</div>
-			<p *ngIf="!perinfor.user">暂时还没有上传书籍</p>
+			<p *ngIf="!perinfor?.userInfor">暂时还没有上传书籍</p>
 		</div>
